--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,20 @@
     width: 50px;
     height: 50px;
 }
+
+#carrouselCard{
+    height: 300px;
+}
+#carrouselCard img{
+    height: 300px;
+}
+@media (min-width:1023px) {
+    .carousel-inner{
+        height: 80vh;
+    }
+    .carousel-inner img{
+        height: 80vh;
+        object-fit: cover;
+        object-position: 50% 50%
+    }    
+}
