--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,16 @@
 #carrouselCard img{
     height: 300px;
 }
-#h1{
-    text-shadow: 1px 2px 3px 4px!important;
-}
 
+#cardEx{
+    height: 600px;
+}
+#h4{
+    width: 90%;
+    text-align: center;
+    align-items: center;
+    margin-left: 5%;
+}
 
 @media (min-width:1023px) {
     .carousel-inner{
@@ -36,6 +42,16 @@
     #h2{
         padding-top: 100px !important;
         padding-bottom: 100px !important; 
+    }
+    #h2ex{
+        padding-top: 100px!important;        
+    }
+    #h4{
+        width: 70%;
+        text-align: center;
+        align-items: center;
+        margin-left: 15%;
+        padding-bottom: 100px;
     }
     #iframe{
         height: 630px!important;
