--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@
     align-items: center;
     margin-left: 5%;
 }
+.card{
+    transition: all 0.5s;
+}
+.card:hover{
+    transform: scale(1.05);
+    z-index: 1;
+}
 
 @media (min-width:1023px) {
     .carousel-inner{
@@ -38,7 +45,6 @@
         object-position: 50% 50%
     
     }  
-
     #h2{
         padding-top: 100px !important;
         padding-bottom: 100px !important; 
@@ -65,6 +71,7 @@
     #bodyCard h5{
         margin-top: 50px;
     }
+
 }
 
 
