--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 *{
     font-family: 'Rubik', sans-serif!important;
+    
 }
 .carousel-inner{
     height: 550px;
@@ -23,6 +24,8 @@
 
 #cardEx{
     height: 600px;
+    object-fit: cover;
+    object-position: 50% 50%
 }
 #h4{
     width: 90%;
@@ -44,6 +47,26 @@ h4{
     font-size: 22px!important;
 }
 
+.slide-in-blurred-right {
+	animation: slide-in-blurred-right 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+ @keyframes slide-in-blurred-right {
+    0% {
+      transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+      transform-origin: 0% 50%;
+      filter: blur(40px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0) scaleY(1) scaleX(1);
+      transform-origin: 50% 50%;
+      filter: blur(0);
+      opacity: 1;
+    }
+  }
+  
+
 @media (min-width:1023px) {
     .carousel-inner{
         height: 80vh;
@@ -55,6 +78,10 @@ h4{
     
     }  
     #h2{
+        padding-top: 100px !important;
+        padding-bottom: 100px !important; 
+    }
+    #h22{
         padding-top: 100px !important;
         padding-bottom: 100px !important; 
     }
@@ -78,11 +105,9 @@ h4{
         padding:50px ;
     }
     #bodyCard h5{
-        margin-top: 55px;
+        margin-top: 43px;
     }
 
 }
-
-
 
 
