--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,5 @@
-*{
-    font-family: 'Rubik', sans-serif!important;
-    
-}
+@import url("_reset.scss");
+
 .carousel-inner{
     height: 550px;
 }
@@ -33,6 +31,7 @@
     text-align: center;
     align-items: center;
     margin-left: 5%;
+
 }
 #card{
     transition: all 0.5s;
@@ -143,6 +142,10 @@ h4{
     }
     #iconsFt{
         margin-top: 0!important;
+    }
+    .containerExc{
+        margin-left: 10%!important;
+        margin-right: 10%!important;
     }
 
 }
