--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,153 +1,9 @@
 @import "./partials/reset";
 
-.carousel-inner{
-    height: 550px;
-}
-.carousel-inner img{
-    height: 550px;
-    object-fit: cover;
-    object-position: 50% 50%
-}
-#iconmont{
-    width: 50px;
-    height: 50px;
-}
+@import "./partials/header";
 
-#carrouselCard{
-    height: 300px;
-}
+@import "./partials/_main";
 
-#carrouselCard img{
-    height: 300px;
-}
+@import "./partials/animations";
 
-#cardEx{
-    height: 600px;
-    object-fit: cover;
-    object-position: 50% 50%
-}
-#h4{
-    width: 90%;
-    text-align: center;
-    align-items: center;
-    margin-left: 5%;
-
-}
-#card{
-    transition: all 0.5s;
-}
-#card:hover{
-    transform: scale(1.05);
-    z-index: 1;
-}
-h4{
-    font-size: 22px !important;
-}
-#h2Contact{
-    font-size: 22px!important;
-}
-
-
-/*------------ANIMACIONES----------*/
-
-.slide-in-blurred-right {
-	animation: slide-in-blurred-right 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
-}
-
- @-webkit-keyframes slide-in-blurred-right {
-    0% {
-      -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
-              transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
-      -webkit-transform-origin: 0% 50%;
-              transform-origin: 0% 50%;
-      -webkit-filter: blur(40px);
-              filter: blur(40px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0) scaleY(1) scaleX(1);
-              transform: translateX(0) scaleY(1) scaleX(1);
-      -webkit-transform-origin: 50% 50%;
-              transform-origin: 50% 50%;
-      -webkit-filter: blur(0);
-              filter: blur(0);
-      opacity: 1;
-    }
-  }
-  @keyframes slide-in-blurred-right {
-    0% {
-      -webkit-transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
-              transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
-      -webkit-transform-origin: 0% 50%;
-              transform-origin: 0% 50%;
-      -webkit-filter: blur(40px);
-              filter: blur(40px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0) scaleY(1) scaleX(1);
-              transform: translateX(0) scaleY(1) scaleX(1);
-      -webkit-transform-origin: 50% 50%;
-              transform-origin: 50% 50%;
-      -webkit-filter: blur(0);
-              filter: blur(0);
-      opacity: 1;
-    }
-  }
-
-  
-
-
-/*-------MEDIAQUERIES PERS.------*/
-
-@media (min-width:1023px) {
-    .carousel-inner{
-        height: 80vh;
-    }
-    .carousel-inner img{
-        height: 80vh;
-        object-fit: cover;
-        object-position: 50% 50%
-    
-    }  
-    #h2{
-        padding-top: 100px !important;
-        padding-bottom: 100px !important; 
-    }
-    #h22{
-        padding-top: 100px !important;
-        padding-bottom: 100px !important; 
-    }
-    #h2ex{
-        padding-top: 100px!important;        
-    }
-    #h4{
-        width: 70%;
-        text-align: center;
-        align-items: center;
-        margin-left: 15%;
-        padding-bottom: 100px;
-    }
-    #iframe{
-        height: 630px!important;
-    }
-    #iframe iframe{
-        height: 600px!important;
-    }
-    #bodyCard p{
-        padding:50px ;
-    }
-    #bodyCard h5{
-        margin-top: 43px;
-    }
-    #iconsFt{
-        margin-top: 0!important;
-    }
-    .containerExc{
-        margin-left: 10%!important;
-        margin-right: 10%!important;
-    }
-    .arreglo{
-    max-width: 100%;
-    }
-}
+@import "./partials/mediaqueries";
