--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -28,7 +28,14 @@
     }
 }
 
-
+.card-header{
+    font-size: 18px;
+    text-align: center;
+    font-weight: 600;
+}
+#ubiTitle{
+    font-weight: 600;
+}
 #h2Contact{
     font-size: 22px!important;
 }
