--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,10 @@
+                    //variables//
+
+$mainFont:"Rubik", sans-serif;
+$colorOne:#fff; 
+
+                    //imports//
+                    
 @import "./partials/reset";
 
 @import "./partials/header";
