--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -12,3 +12,18 @@
     width: 50px;
     height: 50px;
 }
+
+nav {
+    li{
+        a{
+            padding-left: 12px!important;
+            padding-right: 12px!important;
+            
+
+            &:hover{
+                font-size: 18px;
+                font-weight: 600;
+            }
+        }
+    }
+}
