--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,9 +2,10 @@
 
 $mainFont:"Rubik", sans-serif;
 $colorOne:#fff; 
+$mainWeight:600;
 
                     //imports//
-                    
+
 @import "./partials/reset";
 
 @import "./partials/header";
