--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -18,6 +18,12 @@
     align-items: center;
     margin-left: 5%;
 }
+#h5{
+    width: 90%;
+    text-align: center;
+    align-items: center;
+    margin-left: 5%;
+}
 
 #card{
     transition: all 0.5s;
