--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -1,14 +1,17 @@
 /*-------MEDIAQUERIES PERS.------*/
 
 @media (min-width:1023px) {
-    .carousel-inner{
+    #carousel-inner{
         height: 80vh;
     }
-    .carousel-inner img{
+    #carousel-inner img{
         height: 80vh;
-        object-fit: cover;
+        object-fit: cover!important;
         object-position: 50% 50%
     
+    }
+    #carrouselCard{
+        object-fit: cover;
     }  
     #h2{
         padding-top: 100px !important;
@@ -40,8 +43,67 @@
     #bodyCard h5{
         margin-top: 43px;
     }
+    #cardEx{
+        height: 600px;
+    }
     #iconsFt{
         margin-top: 0!important;
     }
 
+                /*HTML UNITS*/
+
+    #carrouselCardis{
+        width: 650px;
+        margin-left: auto;
+        object-fit: cover;
+       
+    }
+
+    #carrouselCardis2{
+       width: 650px;
+       margin-right: auto;
+       object-fit: cover;
+    }
+    .carrousel2{
+        height:600px;
+        img{
+            height: 600px;
+            object-fit:cover;
+        }
+    }
+
+            /*HTML CABNAHUEL*/
+    .icons{
+        display: flex;
+        justify-content: space-around;
+        img{
+            margin-bottom: 25px!important;            
+            }
+    }
+    .p{
+        width: 80%;
+        text-align: center;
+        margin: auto;
+    }
+    .colum{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .services{
+        display: flex!important;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .infor{
+        display: flex;
+        align-items: center!important;
+        p{
+            margin: 0;
+            padding-left: 20px;
+            width: 100%;
+            text-align: left;
+        }
+    
+    }
 }
