--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -94,6 +94,7 @@
         display: flex!important;
         flex-direction: row;
         justify-content: space-evenly;
+        margin: 0;
     }
     .infor{
         display: flex;
